--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+  <button id="loginBtn">Login with Google</button>
   <h1>wibu cx là con ng</h1>
 
   <button id="newCardBtn">➕ New Card</button>
