--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <button id="loginBtn">Login with Google</button>
+  <div id="authModal" class="auth-modal">
+    <input id="emailInput" type="email" placeholder="Email" />
+    <input id="passwordInput" type="password" placeholder="Password" />
+
+    <button id="loginBtn">Login</button>
+    <button id="registerBtn">Register</button>
+</div>
   <h1>wibu cx là con ng</h1>
 
   <button id="newCardBtn">➕ New Card</button>
